update: dsa 113,125,127.md

--- a/dsa/contents/113.md
+++ b/dsa/contents/113.md
@@ -1,20 +1,17 @@
 ### 数组中的第K个最大元素
 
 - https://leetcode.cn/problems/kth-largest-element-in-an-array/
-
 ### 描述
 
 - 给定整数数组 nums 和整数 k，请返回数组中第 k 个最大的元素。
 - 请注意，你需要找的是数组排序后的第 k 个最大的元素，而不是第 k 个不同的元素。
 - 你必须设计并实现时间复杂度为 O(n) 的算法解决此问题。
-
 ### 示例 1
 
 ```
 输入: [3,2,1,5,6,4], k = 2
 输出: 5
 ```
-
 ### 示例 2
 
 ```
@@ -134,10 +131,46 @@ const findKthLargest = (nums, k) => {
     * 但是还有其他排序也可以达到这个效率
     * 但是这个不符合题目的要求：时间复杂度为 O(n) 的算法
 
-3 ）基于快速排序
-
-TODO
+3 ）基于冒泡排序
 
 ```ts
-
+function findKthLargest(nums: number[], k: number): number {
+    const len = nums.length - 1;
+    for (let i = len; i > len - k; i--) {
+        for (let j = 0; j < i; j++) {
+            if (nums[j] > nums[j + 1]) {
+                [nums[j], nums[j + 1]] = [nums[j + 1], nums[j]];
+            }
+        }
+    }
+    return nums[len - k + 1];
+};
 ```
+
+- 这个算法基于冒泡排序修改而来，但是无法通过 leetcode , 对于一些用例数据，超出时间限制
+
+
+4 ）基于快速排序
+
+```ts
+function quickselect(nums: number[], l: number, r: number, k: number) {
+        if (l == r) return nums[k];
+        const pivot = nums[l];
+        let i:number = l - 1, j:number = r + 1;
+        while (i < j) {
+            do i++; while (nums[i] < pivot);
+            do j--; while (nums[j] > pivot);
+            if (i < j) [nums[i], nums[j]] = [nums[j], nums[i]];
+        }
+        return k <= j ? quickselect(nums, l, j, k) : quickselect(nums, j + 1, r, k);
+    }
+
+function findKthLargest(nums: number[], k: number): number {
+    const n = nums.length;
+    return quickselect(nums, 0, n - 1, n - k);
+}
+```
+
+- 这是官方提供的方法
+- 时间复杂度 O(n), 证明过程可以参考「《算法导论》9.2：期望为线性的选择算法」。
+- 空间复杂度 O(logn)，递归使用栈空间的空间代价的期望为 O(log⁡n)O(\log n)O(logn)。
