--- a/dsa/contents/130.md
+++ b/dsa/contents/130.md
@@ -9,29 +9,28 @@
 
 ### 算法实现
 
-```js
-// 随机数组，选择排序
-Array.prototype.selectionSort = function() {
-    let len = this.length;
-    for(let i=0; i<len-1; ++i) {
-        let minIndex = i; // 注意这里更新
-        for(let j=i;j<len;++j) {
-            if(this[j] < this[minIndex]) {
+```ts
+function selectionSort(nums: number[]) {
+    const len: number = nums.length;
+    for(let i: number = 0; i < len - 1; ++ i) {
+        let minIndex: number = i; // 注意这里更新
+        for(let j: number = i; j < len; ++ j) {
+            if(nums[j] < nums[minIndex]) {
                minIndex = j; // 循环更新最小值
             }
         }
         // 最小值与内层循环开始位置进行交换, 通过if做一下优化
         if(i !== minIndex) {
-            [this[i], this[minIndex]] = [this[minIndex], this[i]]; // ES6 交换
+            [nums[i], nums[minIndex]] = [nums[minIndex], nums[i]]; // ES6 交换
         }
-        
     }
 }
 
-let arr = [5,4,3,2,1]
-arr.selectionSort()
-console.log(arr); // [1, 2, 3, 4, 5]
+const list: number[] = [5, 4, 3, 2, 1];
+selectionSort(list);
+console.log(list); // [1, 2, 3, 4, 5]
 ```
+### 总结
 
 - 性能不好，比较简单，贪心
 - 找到数组中最小值，选中它并将其放置于第一位(第一轮)
