--- a/dsa/contents/129.md
+++ b/dsa/contents/129.md
@@ -1,55 +1,10 @@
 ### 排序
 
 - 排序：把某个乱序的数组变成升序或降序的数组 (这里用数组来做举例)
-
 ### 归并排序
 
 - 该排序属于 **分治** 策略
 - 将一个问题分解为两个问题来计算，计算完成之后，就会得到子任务的解，这些解不是最终问题的解，还需要merge起来
-
-### 算法实现
-
-```js
-// 归并排序
-Array.prototype.mergeSort = function() {
-    // 递归自身拆分
-    const rec = (arr) => {
-        let len = arr.length;
-        if(len === 1) {
-            return arr;
-        }
-        let m = Math.floor(len / 2); // 取中值
-        let l = arr.slice(0, mid);
-        let r = arr.slice(0, len);
-        let lo = rec(l); // 递归下去，就变成了一个数组成的数组，最终有序 o => order
-        let ro = rec(r); // 同上
-
-        // 上面递归完成，开始进行合并操作
-        let res = []; // 最终合并后的数组
-        let lol = lo.length; // 左边数组长度
-        let lor = ro.length; // 右边数组长度
-        while(lol || lor) {
-            if(lol && lor) {
-                res.push(lo[0] < ro[0] ? lo.shift() : ro.shift())
-            } else if(lol) {
-                res.push(lo.shift())
-            } else if(rol) {
-                res.push(ro.shift())
-            }
-        }
-        return res;
-    }
-    // 获取递归结果
-    const r = rec(this);
-    // 将有序数组拷贝到this上
-    r.forEach((n, i) => {this[i] = n;});
-}
-
-let arr = [5,4,3,2,1]
-arr.insertionSort()
-console.log(arr); // [1, 2, 3, 4, 5]
-```
-
 - 性能好，火狐的sort方法
 - 思路
     * 分：把数组分成2半，再递归地对子数组进行"分"操作，直到分成一个个单独的数
@@ -61,7 +16,46 @@ console.log(arr); // [1, 2, 3, 4, 5]
         * 比较两个有序数组的头部，较小者出队并推出res中
         * 如果两个数组还有值，就重复第二步
         * 两个数组都空了，合并完成
+
+### 算法实现
+
+```ts
+function mergeSort(nums: number[]) {
+    // 1. 内部核心函数
+	function msFn(arr:number[]) {
+        const len: number = arr.length;
+		if (len < 2) return arr;
+		const mid: number = Math.floor(len / 2);
+		const left: number[] = arr.slice(0, mid);
+		const right: number[] = arr.slice(mid);
+		const orderLeft: any = msFn(left); // 排好序的左侧
+		const orderRight: any = msFn(right); // 排好序的右侧
+		const res: number[] = [];
+		while(orderLeft.length || orderRight.length) {
+			if(orderLeft.length && orderRight.length) {
+				res.push(orderLeft[0] < orderRight[0] ? orderLeft.shift() : orderRight.shift());
+			} else if (orderLeft.length) {
+				res.push(orderLeft.shift());
+			} else if(orderRight.length) {
+				res.push(orderRight.shift());
+			}
+		}
+		return res;
+	}
+    // 2. 开始排序
+	const result = msFn(nums);
+    // 3. 替换原数组
+    nums.splice(0, nums.length, ...result);
+}
+
+const list: number[] = [5, 4, 3, 2, 1];
+mergeSort(list);
+console.log(list); // [1, 2, 3, 4, 5]
+```
+### 总结
+
 - 时间复杂度：O(nlogn)
-    * 分：每次把数组分成两半，用时 O(logn)， log函数用于求2^? = n, 自然要?=log_2 n, 即 O(logn)
+    * 分：每次把数组分成两半，用时 O(logn)， log函数用于求$2^?$ = n, 自然 ? = $log_2 n$, 即 O(logn)
         * 注意，凡是分的操作，基本都是logn
     * 合：O(n), 一个while循环体
+ - 上述开辟了额外空间, 一般是不推荐的，一般是交换下标 TODO
