update: dsa 139~143.md

--- a/dsa/contents/140.md
+++ b/dsa/contents/140.md
@@ -42,12 +42,12 @@ function firstMissingPositive(nums: number[]): number {
   // 再次判断过滤后的数组，如果为空，直接返回1
   if (!nums.length) return 1;
   // 升序，目的：方便从左到右取最小值arr[0]
-  nums.sort((a, b) => a - b);
+  nums.sort((a: number, b: number) => a - b);
   // 如果第一个元素不为1，返回1
   if (nums[0] !== 1) return 1;
   // 从左边开始遍历，只要下一个元素和当前元素差值 > 1说明当前元素的下一个值（+1）就是所求
-  const n = nums.length;
-  for (let i = 0; i < n - 1; i++) {
+  const n: number = nums.length;
+  for (let i:number = 0; i < n - 1; i++) {
     if (nums[i + 1] - nums[i] > 1) return nums[i] + 1;
   }
   // 如果数组是连续的正整数 [1,2,3,4,5,6]
@@ -67,7 +67,7 @@ function firstMissingPositive(nums: number[]): number {
   if (!nums.length) return 1;
   // 过滤掉非正整数
   nums = nums.filter(item => item > 0);
-  const n = nums.length;
+  const n: number = nums.length;
   // 再次判断过滤后的数组，如果为空，直接返回1
   if (!n) return 1;
   let min: number;
@@ -100,7 +100,7 @@ function firstMissingPositive(nums: number[]): number {
   if (!nums.length) return 1;
   // 创建一个map结构存储字典，将正整数存储到
   const m = new Map();
-  let max = -Infinity; // 最大值
+  let max: number = -Infinity; // 最大值
   // 一个循环中处理完毕
   nums.forEach(item => {
     // 非正整数跳出循环
@@ -108,7 +108,7 @@ function firstMissingPositive(nums: number[]): number {
     m.set(item, 1); // map 存储当前值
     max = Math.max(max, item); // 找到当前最大值
   });
-  let minPositive = 1;
+  let minPositive: number = 1;
   while(minPositive <= max) {
     if (!m.get(minPositive)) return minPositive;
     minPositive ++;
@@ -165,7 +165,7 @@ function firstMissingPositive(nums: number[]): number {
 
 ```ts
 function firstMissingPositive(nums: number[]): number {
-  const n = nums.length;
+  const n: number = nums.length;
   let i: number;
   // 第一轮遍历
   for (i = 0; i < n; ++i) {
