--- a/dsa/contents/143.md
+++ b/dsa/contents/143.md
@@ -1,41 +1,57 @@
-### 二分查找
+### 704. 二分查找
 
-- 折半搜索，是在有序数组中查找每个元素的搜索算法，减而治之
-- 注意：前提是数组有序
-- 思路
-    * 从数组中间元素开始，如果中间元素正好是目标值，则搜索结束，返回中间元素下标
-    * 如果目标值大于或小于中间元素，则在大于或小于中间元素的那一半进行搜索，搜索方式同上
-    * 如果搜到最后，还没有，返回-1
+- https://leetcode.cn/problems/binary-search/description/
+
+### 描述
+
+- 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+
+### 示例 1
+
+```
+输入: nums = [-1,0,3,5,9,12], target = 9
+输出: 4
+解释: 9 出现在 nums 中并且下标为 4
+```
+
+### 示例 2
+
+```
+输入: nums = [-1,0,3,5,9,12], target = 2
+输出: -1
+解释: 2 不存在 nums 中因此返回 -1
+```
+
+### 提示
+
+- 你可以假设 nums 中的所有元素是不重复的。
+- n 将在 [1, 10000]之间。
+- nums 的每个元素都将在 [-9999, 9999]之间。
 
 ### 算法实现
 
 ```ts
-function binarySearch(nums: number[], target: number): number {
+function search(nums: number[], target: number): number {
     let low: number = 0; // 最小下标
     let high: number = nums.length - 1; // 最大下标
     while(low <= high) {
         const mid: number = Math.floor((low + high) / 2);
         const current: number = nums[mid];
-        if(current < target) {
-            low = mid + 1;
-        } else if (current > target) {
-            high = mid - 1;
-        } else {
-            return mid;
-        }
+        if (current === target) return mid;
+        if(current < target) low = mid + 1;
+        if (current > target) high = mid - 1;
     }
     return -1
 }
-
-const list: number[] = [15, 24, 33, 45, 51, 51, 67, 78, -2];
-const res1: number = binarySearch(list, 51);
-const res2: number = binarySearch(list, 123);
-console.log(res1); //  4
-console.log(res2); //  -1
 ```
 
 ### 总结
 
+- 折半搜索，是在有序数组中查找每个元素的搜索算法，减而治之
+- 思路
+    * 从数组中间元素开始，如果中间元素正好是目标值，则搜索结束，返回中间元素下标
+    * 如果目标值大于或小于中间元素，则在大于或小于中间元素的那一半进行搜索，搜索方式同上
+    * 如果搜到最后，还没有，返回-1
 - 时间复杂度 O(logn)
     * 每次比较，搜索范围缩半
     * 劈成2半的问题都是O(logn)
